fixed stretched images in show match

--- a/style/style.css
+++ b/style/style.css
@@ -77,3 +77,10 @@
 .nav-tabs {
     margin-bottom: 0;
 }
+
+
+.img-container
+{
+    height:60%;
+    width: 60%;
+}
